--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@mapbox/mapbox-gl-directions": "^4.1.1",
     "mapbox-gl": "^2.15.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-map-gl": "^7.1.6"
+    "react-map-gl": "^7.1.6",
+    "react-mapbox-gl-geocoder": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
